<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:focusable="true"
        app:cardCornerRadius="@dimen/button_radius"
        app:cardElevation="0dp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_width"
                android:layout_marginBottom="@dimen/image_margin_bottom"
                android:src="@drawable/ic_lock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/textView_margin_bottom"
                android:text="@string/popup_title"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/textEdit_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_old_password"
                    android:layout_width="@dimen/textEdit_width"
                    android:layout_height="wrap_content"
                    android:hint="@string/popup_old"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/textEdit_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_new_password"
                    android:layout_width="@dimen/textEdit_width"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple_500"
                    android:hint="@string/popup_new"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/textEdit_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_confirm_password"
                    android:layout_width="@dimen/textEdit_width"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/edit_margin_bottom"
                    android:backgroundTint="@color/purple_500"
                    android:hint="@string/popup_confirm_new"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginRight="@dimen/btn_margin_right"
                    android:background="@drawable/button_design"
                    android:text="@string/btn_confirm_text"
                    android:textColor="@color/white" />

                <Button
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:background="@drawable/button_design"
                    android:text="@string/btn_cancel_text"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>