<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:focusable="true"
        app:cardCornerRadius="@dimen/button_radius"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/popup_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="@dimen/textView_margin_bottom"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/cancel"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_baseline_cancel_24" />
            </RelativeLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/product_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_group_name"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/product_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_quantity"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/monthly_potential"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monthly_potential"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/product_pob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_pob"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remark"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>