<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IntroScreen">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/screen_view_pager"
        android:layout_width="match_parent"
        android:layout_height="500dp"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getStarted"
        android:layout_width="200dp"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:background="@drawable/button_design"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
        android:gravity="center"
        android:text="@string/get_started"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        app:tabBackground="@drawable/indicator_selector"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="660dp">

    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="150dp"
            android:clickable="true"
            android:drawableRight="@drawable/ic_baseline_double_arrow_24"
            android:text="@string/skip"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            android:layout_width="@dimen/button_width_intro"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:background="@drawable/button_design"
            android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
            android:gravity="end"
            android:text="@string/next_screen"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />
    </LinearLayout>
</LinearLayout>