<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DAR.BaseRouteActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_200"
        android:title="@string/base_route"
        tools:targetApi="lollipop" />

    <androidx.cardview.widget.CardView
        android:id="@+id/search_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="8dp"
        app:cardCornerRadius="8dp"
        tools:targetApi="lollipop">

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:hint="@string/search_hint"
            android:inputType="text"
            tools:targetApi="lollipop" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <Spinner
            android:id="@+id/position"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/position" />
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/route_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:visibility="gone"
            tools:listitem="@layout/base_route_list" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/float_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/purple_200"
                android:src="@drawable/ic_baseline_add_24"
                app:fabSize="mini"
                app:layout_constraintBottom_toTopOf="@id/float_copy"
                app:layout_constraintEnd_toEndOf="@id/float_copy"
                app:layout_constraintStart_toStartOf="@id/float_copy"
                tools:ignore="MissingConstraints,NotSibling"
                tools:targetApi="lollipop" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/float_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/purple_200"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_content_copy_24"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                tools:targetApi="lollipop" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</LinearLayout>